# CSocket

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  client.cpp  server.cpp
include/core/: core.h  core_unix.h  error.h  port.h
include/event/: event.h  event_engine_base.h  event_engine_poll_unix.h  event_engine_select_win32.h
include/socket/: CSocket.h  sockaddr.h  sockaddr_unix.h  socket.h  socket_base.h  socket_imp_unix.h  socket_imp_win32.h  socket_utils.h  socket_utils_unix.h  socket_utils_win32.h
include/tls/: ssl_transport_security.h
src/: CMakeLists.txt  CSocket.c  CSocket.cpp  CSocket.h  config.h  core.h  core_win32.h  darwin_config.h  error.cpp  error.h  event.h  event_base.h  event_poll_unix.h  event_select.h  event_select_unix.h  event_select_win32.h  linux_config.h  port_platform.h  sockaddr.h  sockaddr_unix.cpp  sockaddr_unix.h  sockaddr_win32.cpp  sockaddr_win32.h  socket.h  socket_base.h  socket_imp_unix.cpp  socket_imp_unix.h  socket_imp_win32.cpp  socket_imp_win32.h  socket_utils.h  socket_utils_unix.cpp  socket_utils_unix.h  socket_utils_win32.cpp  socket_utils_win32.h  win_config.h
src/core/: error.cpp
src/event/: event_engine_poll_unix.cpp
src/socket/: CSocket.cpp  sockaddr_unix.cpp  sockaddr_win32.cpp  socket_imp_unix.cpp  socket_imp_win32.cpp  socket_utils_unix.cpp
src/tls/: ssl_transport_security.cpp
test/: CMakeLists.txt  test.cpp
